@@ -1,3 +1,11 @@
+2001-08-31  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_getimage.c: relax handling of contig case where
+	there are extra samples that are supposed to be ignored.  This
+	should now work for 8bit greyscale or palletted images.  
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=75	
+
 2001-08-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_getimage.c: Don't complain for CMYK (separated)
